--- a/BlazorView/Pages/index.razor.css
+++ b/BlazorView/Pages/index.razor.css
@@ -1,8 +1,9 @@
 ﻿.contentWrapper {
     display: flex;
     flex-direction: column;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
     align-items: center;
+    background-color: #00989e;
 }
 
 .contentWrapper h1 {
@@ -53,3 +54,4 @@
     position: absolute;
     opacity: 0.95;
 }
+
