--- a/BlazorView/Pages/Components/DisplayListing.razor.css
+++ b/BlazorView/Pages/Components/DisplayListing.razor.css
@@ -12,3 +12,15 @@
         text-decoration: none;
         border: none;
     }
+
+.advButton {
+    background-color: #00989e;
+    width: 5%;
+    margin:0.5rem;
+    border-style: none;
+}
+
+    .advButton img {
+        width: 100%;
+        height: 100%;
+    }
